--- a/data-products/pom.xml
+++ b/data-products/pom.xml
@@ -28,6 +28,11 @@
 			<name>Jcenter Repo</name>
 			<url>https://jcenter.bintray.com/</url>
 		</repository>
+		<repository>
+			<id>ICM</id>
+			<name>ICM Repo</name>
+			<url>http://maven.icm.edu.pl/artifactory/repo/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -166,7 +171,7 @@
 		<dependency>
 			<groupId>com.datastax.spark</groupId>
 			<artifactId>spark-cassandra-connector_${scala.maj.version}</artifactId>
-			<version>2.4.1</version>
+			<version>2.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scalanlp</groupId>
@@ -216,7 +221,8 @@
 		<dependency>
 			<groupId>org.cassandraunit</groupId>
 			<artifactId>cassandra-unit</artifactId>
-			<version>3.1.1.0</version>
+			<!-- <version>3.1.1.0</version> -->
+			<version>4.3.1.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
